fix for toggle vertical alignement

--- a/docs/css/fiori-fundamentals.css
+++ b/docs/css/fiori-fundamentals.css
@@ -4321,7 +4321,9 @@ This will render 4 boxes spanning 2 cols each indented 2 cols
         font-weight: 400;
         margin-bottom: 0;
         vertical-align: middle;
-        display: inline-block;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
